--- a/styles/components/events.module.css
+++ b/styles/components/events.module.css
@@ -92,8 +92,10 @@
   
   .eventImage {
     width: 100%;
-    height: 200px;
+    height: 350px;
     object-fit: cover;
+    object-position: top;
+    
   }
   
   .eventInfo {
