--- a/styles/components/footer.module.css
+++ b/styles/components/footer.module.css
@@ -15,10 +15,16 @@
   
   @media (min-width: 768px) {
     .footerContent {
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(3, 1fr);
     }
   }
   
+  .column.logo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
   .column h3 {
     font-weight: 600;
     margin-bottom: 0.5rem;
