--- a/styles/components/header.module.css
+++ b/styles/components/header.module.css
@@ -7,7 +7,22 @@
     padding: 1rem 2rem;
 ;
   }
-
+  .link {
+    color: white;
+    text-decoration: none;
+    font-size: 1rem;
+    transition: color 0.2s;
+  }
+  
+  .link:hover {
+    color: #BBBDC0;
+  }
+  
+  .active {
+    color: #e53e3e; /* red */
+    font-weight: 600;
+  }
+  
   .logoBox {
     display: flex;
     align-items: center;
@@ -19,10 +34,7 @@
     color: white;
   }
   
-  .nav {
-
-    padding: 0.5rem 1rem;
-  }
+ 
   
   /* Menu list styling */
   .navList {
@@ -33,12 +45,7 @@
     padding: 0;
   }
   
-  /* Menu link styling: white text, no underline */
-  .navList li a {
-    color: white;
-    text-decoration: none;
-    font-size: 1rem;
-  }
+
   
   /* Optional: Hover effect */
   .navList li a:hover {
