--- a/styles/components/classes.module.css
+++ b/styles/components/classes.module.css
@@ -3,6 +3,7 @@
     color: #fff;
     min-height: 100vh;
     padding: 2rem;
+    font-family: var(--font-cinzel);
   }
   
   .heading {
@@ -16,6 +17,7 @@
     display: grid;
     gap: 2rem;
     margin-bottom: 3rem;
+    
   }
   
   @media (min-width: 768px) {
@@ -95,6 +97,7 @@
     cursor: pointer;
     font-size: 1rem;
     transition: background-color 0.2s;
+    font-family: var(--font-cinzel);
   }
   
   .scheduleToggle:hover {
