--- a/styles/components/gym.module.css
+++ b/styles/components/gym.module.css
@@ -4,6 +4,7 @@
     width: 100%;
     height: 500px;
     background: url('/thegym/hero-bg.jpg') center center / cover no-repeat;
+    font-family: var(--font-cinzel);
   }
   
   .heroOverlay {
@@ -52,6 +53,7 @@
     background-color: #111;
     color: #fff;
     padding: 2rem;
+    font-family: var(--font-cinzel);
   }
   
   .facilitySection,
