--- a/styles/components/team.module.css
+++ b/styles/components/team.module.css
@@ -5,6 +5,7 @@
     height: 600px;
     /* Align top so it doesn’t crop the top of the image */
     background: url('/team/masda_team.jpg');
+    font-family: var(--font-cinzel);
   }
   
   .heroOverlay {
@@ -19,6 +20,7 @@
     justify-content: center;
     align-items: center;
     color: #fff;
+    
   }
   
   
@@ -26,12 +28,15 @@
     font-size: 2rem;
     margin-bottom: 1rem;
     text-align: center;
+    
+    
   }
   
   .heroSubtitle {
     font-size: 1.2rem;
     max-width: 600px;
     text-align: center;
+    
   }
   
   /* Main Content */
@@ -39,6 +44,7 @@
     background-color: #111;
     color: #fff;
     padding: 2rem;
+    font-family: var(--font-cinzel);
   }
   
   /* Team Section */
