--- a/styles/components/buttons.module.scss
+++ b/styles/components/buttons.module.scss
@@ -15,6 +15,7 @@ $color: #2f3490;
   position: relative;
   overflow: hidden;
   z-index: 1;
+  text-decoration: none;
   &:after {
     content: '';
     position: absolute;
