--- a/styles/components/header.module.css
+++ b/styles/components/header.module.css
@@ -20,7 +20,7 @@
   }
   
   .active {
-    color: #e53e3e; /* red */
+    color: #e53e3e; 
     font-weight: 600;
   }
   
@@ -48,7 +48,6 @@
   
 
   
-  /* Optional: Hover effect */
   .navList li a:hover {
     color: #BBBDC0;
   }
