--- a/styles/global.css
+++ b/styles/global.css
@@ -3,6 +3,7 @@ body {
     background-color: #000;
     color: #fff;
     font-family: var(--font-cinzel);
+    overflow-x: hidden;
   }
 
   :root {
