--- a/styles/components/foundation.module.css
+++ b/styles/components/foundation.module.css
@@ -11,11 +11,12 @@
 .heroSection {
   position: relative;
   width: 100%;
-  height: 300px;
+  height: 200px;
   background: url('/foundation/hero-bg.jpg') center/cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
+  
 }
 .heroOverlay {
   text-align: center;
@@ -25,11 +26,27 @@
   color: #fff;
   font-size: 2.5rem;
   margin: 0;
+  margin-top: 8rem;
 }
 .heroSubtitle {
   color: #e53e3e; /* gold accent */
   font-size: 1.25rem;
   margin-top: 0.5rem;
+
+}
+
+.logoWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+.foundationLogo {
+  margin-top: 0;
+  width: 300px;
+  height: auto;
+  object-fit: contain;
 }
 
 /* Common Section Styles */
