--- a/styles/components/team.module.css
+++ b/styles/components/team.module.css
@@ -65,10 +65,12 @@
   }
   
   /* Team Grid */
-  .teamGrid {
-    display: grid;
-    gap: 2rem;
-  }
+ .teamGrid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 2rem;
+  justify-items: center; /* center cards in grid cells */
+}
 
   .indivRole{
     margin-bottom: 0.5rem;
@@ -93,6 +95,7 @@
     padding: 1rem;
     text-align: center;
     height: 550px;
+    width: 400px;
     transition: transform 0.3s, box-shadow 0.2s;
     cursor: pointer;
   }
@@ -167,4 +170,33 @@
   font-size: 0.85rem;
   color: #777;
   font-style: italic;
+}
+
+.filterControls {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 2rem;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.dropdown {
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  border-radius: 8px;
+  border: 1px solid #222;
+}
+
+
+.searchInput, .dropdown {
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  border-radius: 8px;
+  border: 1px solid #333;
+  background-color: #333;
+  color: #ed1c28;
+}
+.centerSingle {
+  grid-template-columns: 1fr !important;
+  place-items: center !important; /* centers the one card vertically and horizontally */
 }
