--- a/styles/components/fightnight.module.css
+++ b/styles/components/fightnight.module.css
@@ -92,7 +92,7 @@
   
   .eventImage {
     width: 100%;
-    height: 350px;
+    height: 515px;
     object-fit: cover;
     object-position: top;
     
@@ -103,6 +103,7 @@
   }
   
   .eventInfo h3 {
+    margin-top: 0;
     font-size: 1.25rem;
     margin-bottom: 0.5rem;
   }
