--- a/styles/components/classes.module.css
+++ b/styles/components/classes.module.css
@@ -132,3 +132,25 @@
     background-color: #222;
   }
   
+  .hours{
+    text-align: center;
+    font-size: 1.3rem;
+    margin-top: 3rem;
+  }
+
+ .contactButton {
+  background-color: #e53e3e;
+  color: #fff;
+  padding: 0.75rem 1.5rem;
+  border-radius: 0.25rem;
+  text-decoration: none;
+  font-weight: 500;
+  transition: background-color 0.2s;
+}
+.contactButton:hover {
+    background-color: #c53030;
+  }
+.contactWrapper {
+  display: flex;
+  justify-content: center;
+}
