--- a/styles/components/modal.module.css
+++ b/styles/components/modal.module.css
@@ -80,7 +80,7 @@ display: flex;
 
 .weight, .ageBox {
   font-size: 1rem;
-  background: #111;
+  background: #1a1a1a;
   padding: 0.5rem 1rem;
   border-radius: 6px;
   text-align: center;
