--- a/styles/components/buttons.module.scss
+++ b/styles/components/buttons.module.scss
@@ -4,9 +4,13 @@ $color: #2f3490;
 
 .rbutton {
   display: inline-block;
+  border: none !important;     
+  outline: none !important;    
+  box-shadow: none !important;
   padding: .75rem 1.25rem;
   border-radius: 10rem;
   color: #fff;
+  border-color: black;
   text-transform: uppercase;
   font-size: 1rem;
   font-family: var(--font-cinzel);
@@ -46,4 +50,3 @@ $color: #2f3490;
     }
   }
 }
-
