--- a/styles/components/home.module.css
+++ b/styles/components/home.module.css
@@ -24,6 +24,9 @@
 }
 
 
+
+
+
 .videoVisible {
   opacity: 1;
 }
@@ -36,9 +39,10 @@
   position: absolute;
   top: 0; left: 0;
   width: 100%; height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.6);
   z-index: 0;
 }
+
 
 
 .content {
@@ -72,27 +76,62 @@
   }
   
 
-  /*
+@media (max-width: 768px) {
+    .main {
+    flex: 1 !important;                         /* fill everything under the header */
+  display: flex !important;
+  flex-direction: column !important;
+  justify-content: space-between !important;  /* pushes .content up and .swipeUp down */
+  position: relative !important;
+  height: 80vh;
+}
 
-  .flipButton {
-  background-color:  #2f3490;
-  color: white;
-  border: 2px solid  #2f3490;
-  padding: 12px 24px;
-  font-size: 1rem;
-  font-weight: bold;
-  text-transform: uppercase;
-  cursor: pointer;
-  transition: all 0.4s ease;
+  .videoCropper {
   position: relative;
+  width: 100%;
+  height: calc(100vw * 10 / 10); 
   overflow: hidden;
-  border-radius: 0.5rem;
 }
 
-.flipButton:hover {
-  background-color: #ed1c28;
-  color: white;
-  border: 2px solid #ed1c28;
+.videoBg {
+  position: absolute !important;
+  object-fit: cover !important;
 }
-*/
+
+
+  .overlay {
+    margin-top: 0rem;
+    background-color: rgba(0, 0, 0, 0.5);
+    
+  }
+
+  .content {
+    position: relative;
+    order: 2;           
+    padding: 1rem;
+    text-align: center;
+    vertical-align: top    !important;
+  }
+  .main h1 {
+    font-size: 1.5rem;         
+  }
+  .main p {
+    font-size: 1rem;         
+    max-width: 90%;          
+  }
+
+
+
+
+@keyframes slideUpAnim {
+    from { transform: translateY(0); }
+    to   { transform: translateY(-100%); }
+  }
+  .slideUp {
+    animation: slideUpAnim 0.6s ease-in-out forwards;
+  }
+
+
+}
+
 
